--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "eggbe/server-bridge",
 	"version": "1.0.0",
 	"type": "library",
-	"keywords": ["client", "server", "communication", "library"],
+	"keywords": ["client", "server", "communication"],
 	"description": "Server part of the client-server communications library.",
 	"license": "MIT",
 	"authors": [
