--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
 	"name": "eggbe/server-bridge",
-	"version": "1.1.0",
+	"version": "2.0.0",
 	"type": "library",
-	"keywords": ["client", "server", "client-server", "communication"],
-	"description": "Server part of the client-server communications library.",
+	"keywords": ["api", "server-side", "server-to-server"],
+	"description": "The server part of the server-to-server communications library.",
 	"license": "MIT",
 	"authors": [
 		{
@@ -16,8 +16,8 @@
 		"eggbe/helpers": "dev-master"
 	},
 	"autoload": {
-		"psr-0": {
-			"Eggbe\\ServerBridge": "src/"
+		"psr-4": {
+			"Eggbe\\ServerBridge\\": "src/"
 		}
 	}
 }
