--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "eggbe/server-bridge",
 	"version": "2.0.0",
 	"type": "library",
-	"keywords": ["api", "server-side", "server-to-server"],
+	"keywords": ["api", "server-side", "server-to-server", "high-performance"],
 	"description": "The server part of the server-to-server communications library.",
 	"license": "MIT",
 	"authors": [
