--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 	],
 	"require": {
 		"php": ">=5.5.0",
-		"eggbe/helpers": "dev-master"
+		"able/helpers": "dev-master"
 	},
 	"autoload": {
 		"psr-4": {
